<resources>
    <!-- Titles -->

    <string name="app_name">AnimatedLEDStrip LED Control</string>
    <string name="app_launcher_name">LED CTRL</string>
    <string name="title_activity_main_disconnected">AnimatedLEDStrip (Disconnected)</string>
    <string name="title_activity_main_connected">AnimatedLEDStrip (%1$s)</string>
    <string name="title_activity_add_connection">Edit Servers</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Menu -->

    <string name="action_disconnect">Disconnect</string>
    <string name="action_clear_strip">Clear Strip</string>
    <string name="action_add_ip">Edit Servers</string>
    <string name="action_settings">Settings</string>


    <!-- Notifications -->

    <string name="notification_title">LED Control</string>
    <string name="notification_body_connected_to">Connected to %1$s</string>
    <string name="notification_channel_name">Active Connection</string>
    <string name="notification_channel_description">Report an active connection</string>


    <!-- Toasts -->

    <string name="toast_body_not_connected">Not Connected</string>
    <string name="toast_body_could_not_connect">Could not connect to %1$s</string>
    <string name="toast_body_invalid_parameter">Invalid value %1$s for parameter %2$s</string>


    <!-- Tabs -->

    <string name="tab_1_server">Servers</string>
    <string name="tab_2_send">Send Animation</string>
    <string name="tab_3_running">Running Anims</string>
    <string name="tab_4_strip_info">Strip Info</string>


    <!-- Server List -->

    <string name="server_list_button_disconnected">Connect</string>
    <string name="server_list_button_connected">Connected</string>
    <string name="server_list_button_connecting">Connecting…</string>


    <!-- Animation Options -->

    <string name="anim_param_color">Color</string>
    <string name="anim_param_direction_forward">Forward</string>
    <string name="anim_param_direction_backward">Backward</string>

    <string name="anim_color_button_presets">PRESETS</string>
    <string name="anim_color_button_clear_colors">Clear</string>
    <string name="anim_color_button_add">Add</string>
    <string name="anim_add_color_button">Add Another Color</string>

    <string name="popup_label">%1$s: </string>
    <string name="distance_absolute">Absolute Distance</string>
    <string name="distance_percent">Percent Distance</string>
    <string name="rotation_radians">Radians Rotation</string>
    <string name="rotation_degrees">Degrees Rotation</string>


    <!-- Running Animations -->

    <string name="run_anim_end_anim_button_end">End</string>
    <string name="run_anim_end_anim_button_ending">Ending</string>

    <string name="run_anim_label_animation">Animation: %1$s</string>
    <string name="run_anim_label_run_count">Run Count: %1$s</string>
    <string name="run_anim_label_color">Color:</string>
    <string name="run_anim_label_param">%1$s: %2$s</string>
    <string name="run_anim_label_direction">Direction: %1$s</string>
    <string name="run_anim_label_id">ID</string>


    <!-- Strip Info -->

    <string name="strip_info_title">Strip Info</string>
    <string name="strip_info_num_leds">Number of LEDs: %1$s</string>
    <string name="strip_info_pin">Pin: %1$s</string>
    <string name="strip_info_logging_enabled">Render Logging Enabled: %1$s</string>
    <string name="strip_info_log_file_name">Render Log File Name: %1$s</string>
    <string name="strip_info_renders_between_saves">Renders Between Log Saves: %1$s</string>
    <string name="strip_info_is_1d_supported">1D Supported: %1$s</string>
    <string name="strip_info_is_2d_supported">2D Supported: %1$s</string>
    <string name="strip_info_is_3d_supported">3D Supported: %1$s</string>
    <string name="strip_color_title">Current Strip Color</string>


    <!-- Settings -->

    <string name="setting_dark_mode">Dark Mode</string>
    <string-array name="setting_dark_mode_options">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="setting_port">Port</string>
    <string name="setting_enable_notifications">Enable Notification</string>


    <!-- Server Edit -->

    <string name="server_edit_button_edit">Edit</string>
    <string name="server_edit_label_ip">IP</string>
    <string name="server_edit_default_ip">0.0.0.0</string>


    <!-- Popups -->

    <string name="popup_dialog_header_new_server">New Server</string>
    <string name="popup_dialog_header_edit_server">Edit Server</string>
    <string name="popup_dialog_header_edit_number">Edit %1$s</string>
    <string name="popup_dialog_button_save">Save</string>
    <string name="popup_dialog_button_cancel">Cancel</string>
    <string name="popup_dialog_button_remove">Remove</string>

    <!-- Other-->
    <string name="select_a_server_first">Select a server first</string>
    <string name="contacting_server">Contacting server for data</string>

</resources>
