<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/colorViewBack"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp"
        tools:context=".running.RunningAnimationFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/animation_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/run_anim_label_id"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:id="@+id/animation_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#ff0000"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/run_anim_end_anim_button_end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
                android:id="@+id/animation_params"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animation_end">

            <TextView
                    android:id="@+id/animation_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/run_anim_label_animation"
                    android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/animation_run_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/run_anim_label_run_count"
                android:textColor="@color/colorText" />

            <LinearLayout
                    android:id="@+id/animation_colors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/animation_intParams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/animation_doubleParams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/animation_distanceParams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/animation_locationParams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                    android:id="@+id/animation_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/run_anim_label_direction"
                    android:textColor="@color/colorText" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>